--- a/frontend/src/app/applicants/applications-upload/applications-upload.page.scss
+++ b/frontend/src/app/applicants/applications-upload/applications-upload.page.scss
@@ -4,35 +4,18 @@
   margin-bottom: 0px;
   font-size: 25px;
   font-weight: 500;
+  text-align: center;
 }
 
 .second-button {
   background: var(--ion-color-medium-tint) !important;
 }
 
-.button-css {
-  padding-top: 0;
-}
-
-.upload-info,
-.error-info {
-  padding: 1rem;
-  font-size: 20px;
-}
-
-.spinner-css {
+.status-icon {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 50px;
   transform: scale(1.5);
-}
-.success-icon {
-  color: var(--ion-color-success);
-}
-
-.failure-icon,
-.error-info {
-  color: var(--ion-color-danger);
 }
