--- a/frontend/src/app/forms/steps/work-experience/work-experience.component.html
+++ b/frontend/src/app/forms/steps/work-experience/work-experience.component.html
@@ -33,7 +33,7 @@
               >{{ data.controls.company.value }} .
               {{
                 'workExperience.employmentTypeValue'
-                  | translate: { empType: data.controls.employmentType.value }
+                  | translate: { empType: data.controls.employmentType.value | getI18NStringForEmploymentType }
               }}</span
             >
           </p>
