--- a/HR-Monitor/src/View/storageView.fxml
+++ b/HR-Monitor/src/View/storageView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -34,8 +33,9 @@
          <children>
                 <TableView fx:id="userTable" style="-fx-border-radius: 0;">
                     <columns>
-                        <TableColumn fx:id="firstNameCol" minWidth="-1.0" prefWidth="204.0" text="First Name" />
-                        <TableColumn fx:id="lastNameCol" prefWidth="79.0" text="Last Name" />
+                        <TableColumn fx:id="firstNameCol" minWidth="-1.0" prefWidth="204.0" style="-fx-alignment: CENTER;" text="First Name" />
+                        <TableColumn fx:id="lastNameCol" prefWidth="79.0" style="-fx-alignment: CENTER;" text="Last Name" />
+                  <TableColumn fx:id="status" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Status" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
